# flexplugins

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: release.yml  standard_build.yml
src/filters/: CMakeLists.txt  FIR.schelp  filters.cpp  filters.sc  fir.cpp  fir.hpp
src/generators/: CMakeLists.txt  ImpulseDropout.schelp  ImpulseJitter.schelp  LoopPhasor.schelp  arrayheap.cpp  arrayheap.hpp  generators.cpp  generators.sc  impulseDropout.cpp  impulseDropout.hpp  impulseJitter.cpp  impulseJitter.hpp  loopPhasor.cpp  loopPhasor.hpp
src/pv/: CMakeLists.txt  PV_CFreeze.schelp  PV_MagMirror.schelp  PV_MagSqueeze.schelp  PV_MagXFade.schelp  PV_PlayBufStretch.schelp  peakFinder.cpp  peakFinder.hpp  pv.cpp  pv.sc  pvCFreeze.cpp  pvCFreeze.hpp  pvOther.cpp  pvOther.hpp  pvStretch.cpp  pvStretch.hpp
src/rubberband/: CMakeLists.txt  RubberBandPS.schelp  RubberBandStretcher.cpp  RubberBandStretcher.schelp  RubberBandStretcherBuf.schelp  ringbuffer.hpp  rubberBandPS.cpp  rubberBandPS.hpp  rubberBandStretcher.cpp  rubberBandStretcher.hpp  rubberBandStretcherBuf.cpp  rubberBandStretcherBuf.hpp  rubberband.cpp  rubberband.hpp  rubberband.sc
